src/tests/test-src/errors/R27-subscript-step-zero.syntran
let a = [0, 1, 2, 3, 4];
let s = 0;
let b = a[0: s: 4];
